Code clean-ups.